# learn-substrate-easy-source

./: README.md
placeholder/: Cargo.toml
placeholder/src/: main.rs
substrate-node-template/: start-alice.sh  start-bob.sh  start.sh
substrate-node-template/node/: Cargo.toml
substrate-node-template/node/src/: chain_spec.rs  rpc.rs
substrate-node-template/pallets/debug/: Cargo.toml
substrate-node-template/pallets/debug/src/: lib.rs
substrate-node-template/pallets/ext-example/: Cargo.toml
substrate-node-template/pallets/ext-example/src/: lib.rs
substrate-node-template/pallets/extend-pallet/: Cargo.toml
substrate-node-template/pallets/extend-pallet/src/: lib.rs
substrate-node-template/pallets/migration/: Cargo.toml
substrate-node-template/pallets/migration/src/: lib.rs  migration.rs
substrate-node-template/pallets/ocw-sigtx/: Cargo.toml
substrate-node-template/pallets/ocw-sigtx/src/: lib.rs
substrate-node-template/pallets/ocw-unsigtx/: Cargo.toml
substrate-node-template/pallets/ocw-unsigtx/src/: lib.rs
substrate-node-template/pallets/ocw-unsigxtx-payload/: Cargo.toml
substrate-node-template/pallets/ocw-unsigxtx-payload/src/: lib.rs
substrate-node-template/pallets/offchain-index/: Cargo.toml
substrate-node-template/pallets/offchain-index/src/: lib.rs
substrate-node-template/pallets/offchain-storage/: Cargo.toml
substrate-node-template/pallets/offchain-storage/src/: lib.rs
substrate-node-template/pallets/offchain-storage2/: Cargo.toml
substrate-node-template/pallets/offchain-storage2/src/: lib.rs
substrate-node-template/pallets/simple-pallet/: Cargo.toml
substrate-node-template/pallets/storage-provider/: Cargo.toml
substrate-node-template/pallets/storage-provider/src/: lib.rs  traits.rs
substrate-node-template/pallets/use-benchmarking/: Cargo.toml
substrate-node-template/pallets/use-benchmarking/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
substrate-node-template/pallets/use-config1/: Cargo.toml
substrate-node-template/pallets/use-config1/src/: lib.rs
substrate-node-template/pallets/use-config2/: Cargo.toml
substrate-node-template/pallets/use-config2/src/: lib.rs
substrate-node-template/pallets/use-errors/: Cargo.toml
substrate-node-template/pallets/use-errors/src/: lib.rs
substrate-node-template/pallets/use-hooks/: Cargo.toml
substrate-node-template/pallets/use-hooks/src/: lib.rs
substrate-node-template/pallets/use-http/: Cargo.toml
substrate-node-template/pallets/use-http/src/: lib.rs
substrate-node-template/pallets/use-other-pallet1/: Cargo.toml
substrate-node-template/pallets/use-other-pallet1/src/: lib.rs
substrate-node-template/pallets/use-rpc/: Cargo.toml
substrate-node-template/pallets/use-rpc/rpc/: Cargo.toml
substrate-node-template/pallets/use-rpc/rpc/run-api/: Cargo.toml
substrate-node-template/pallets/use-rpc/rpc/run-api/src/: lib.rs
substrate-node-template/pallets/use-rpc/rpc/runtime-api/: Cargo.toml
substrate-node-template/pallets/use-rpc/rpc/runtime-api/src/: lib.rs
substrate-node-template/pallets/use-rpc/rpc/src/: lib.rs
substrate-node-template/pallets/use-rpc/src/: lib.rs
substrate-node-template/pallets/use-storage/: Cargo.toml
substrate-node-template/pallets/use-storage/src/: lib.rs
substrate-node-template/pallets/use-test/: Cargo.toml
substrate-node-template/pallets/use-test/src/: lib.rs  mock.rs  tests.rs
substrate-node-template/runtime/: Cargo.toml
substrate-node-template/runtime/src/: lib.rs
traits/ext1/: Cargo.toml
traits/ext1/src/: main.rs
traits/ext2/: Cargo.toml
traits/ext2/src/: main.rs
traits/ext3/: Cargo.toml
traits/ext3/src/: main.rs
traits/ext4/: Cargo.toml
traits/ext4/src/: main.rs
traits/ext5/: Cargo.toml
traits/ext5/src/: main.rs
traits/ext6/: Cargo.toml
traits/ext6/src/: main.rs
