[package]
name = "use-rpc-runtime-api"
version = "1.0.0"
authors = ["linghuyichong"]
edition = "2021"
license = "Apache-2.0"
description = "Rpc api for use-rpc."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
]